--- a/styles/scss/diskography.scss
+++ b/styles/scss/diskography.scss
@@ -60,18 +60,18 @@
         background-size: cover;
     }
     &-out-of-my-hands-album {
-        background: url("../images/Out of My Hands.png");
+        background: url("../images/Out_of_My_Hands.png");
         background-size: cover;
     }
     &-letter-from-egypt-album {
-        background: url("../images/Letter from Egypt.png");
+        background: url("../images/Letter_from_Egypt.png");
     }
     &-vogts-villa-album {
-        background: url("../images/Vogts Villa.png");
+        background: url("../images/Vogts_Villa.png");
         background-size: cover;
     }
     &-wild-seed-album {
-        background: url("../images/Wild Seed.png");
+        background: url("../images/Wild_Seed.png");
         background-size: cover; 
     }
     &-poetenes-evangelium-album {
