--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -30,6 +30,7 @@ body {
 }
 
 .wrapper {
+    margin: auto;
     @media (max-width: 320px) {
         padding: 10px;
     }
@@ -74,6 +75,10 @@ body {
 
 .mb40 {
     margin-bottom: 40px;
+}
+
+.m-auto {
+    margin: auto;
 }
 
 .bg-layout-cover-norepeat-position-center {
