header-footer more space album-btn white

--- a/styles/scss/diskography.scss
+++ b/styles/scss/diskography.scss
@@ -84,6 +84,7 @@
     margin-left: 5px;
     margin-bottom: 5px;
     height: 17px;
+    filter: invert(100%);
     @media (min-width: 768px) {
         margin-left: 15px;
         margin-bottom: 10px;
