--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -34,14 +34,24 @@ body {
     @media (max-width: 320px) {
         padding: 10px;
     }
-    margin: auto;
-    max-width: 1200px;
     @media (min-width: 320px) {
+        width: 280px;
+    }
+    @media (min-width: 375px) {
+        width: 330px;
+    }
+    @media (min-width: 425px) {
         width: 87%;
     }
+    @media (min-width: 768px) {
+        width: 672px;
+    }
+    @media (min-width: 1024px) {
+        width: 1000px;
+    }
     @media (min-width: 1280px) {
-        width: 100%;
-    } 
+        width: 1200px;
+    }
 }
 
 .pt100 {
@@ -58,6 +68,10 @@ body {
 
 .pt50 {
     padding-top: 50px;
+}
+
+.pt25 {
+    padding-top: 25px; 
 }
 
 .pb50 {
