--- a/styles/scss/footer.scss
+++ b/styles/scss/footer.scss
@@ -7,6 +7,12 @@ footer {
     @media (min-width: 768px) {
         flex-direction: row;
     }
+    @media (min-width: 1024px) {
+        width: 900px;
+    }
+    @media (min-width: 1280px) {
+        width: 1020px;
+    }
 }
 
 .footer-blocks-styles {
@@ -21,7 +27,7 @@ footer {
 }
 
 .footer-link-styles {
-    line-height: 20px;
+    line-height: 200%;
     color: $palette-text-secondary;
 }
 
