--- a/styles/scss/latestnews.scss
+++ b/styles/scss/latestnews.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     @media (min-width: 768px) {
         flex-direction: row;
+        justify-content: space-between;
+    }
+    &>div {
+        padding-right: 70px;
     }
 }
 
@@ -10,13 +14,12 @@
     width: 100%;
     justify-content: space-evenly;
     @media (min-width: 768px) {
-        margin: 20px;
-        width: 60%;
+        width: 47%;
     }
 }
 
 .osborn-order {
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
         flex-direction: column-reverse;
     }
 }
@@ -37,7 +40,7 @@
         width: 90%;
     }
     @media (min-width: 1024px) {
-        width: 35%;
+        width: 45%;
     }
 }
 
@@ -58,7 +61,7 @@
 
 .news-button {
     width: 100%;
-    padding: 10px 40px;
+    justify-content: center;
     border: 4px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 4px;
@@ -67,6 +70,7 @@
         width: 90%;
     }
     @media (min-width: 1024px) {
-        width: 35%;
+        width: 130px;
+        height: 40px;
     }
 }
