--- a/styles/style.css
+++ b/styles/style.css
@@ -64,6 +64,15 @@
   }
 }
 
+.fsz-14-20 {
+  font-size: 14px;
+}
+@media (min-width: 1024px) {
+  .fsz-14-20 {
+    font-size: 20px;
+  }
+}
+
 .fsz-16-24 {
   font-size: 16;
 }
@@ -215,12 +224,34 @@ input[type=text]::-webkit-input-placeholder {
   color: #FFFFFF;
 }
 
+@media (max-width: 425px) {
+  .main-page-access-container {
+    padding-top: 70px;
+    padding-bottom: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .main-page-access-container {
+    padding-top: 130px;
+    padding-bottom: 100px;
+  }
+}
+@media (max-width: 1024px) {
+  .main-page-access-container {
+    padding-top: 170px;
+    padding-bottom: 200px;
+  }
+}
+@media (min-width: 1024px) {
+  .main-page-access-container {
+    padding-top: 230px;
+    padding-bottom: 250px;
+  }
+}
+
 .b-main-page-acces-form-container {
   max-width: 570px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: space-between;
   flex-wrap: wrap;
 }
 
@@ -329,7 +360,11 @@ input[type=text]::-webkit-input-placeholder {
 @media (min-width: 768px) {
   .news-aricle-container {
     flex-direction: row;
+    justify-content: space-between;
   }
+}
+.news-aricle-container > div {
+  padding-right: 70px;
 }
 
 .news-txt-container {
@@ -338,12 +373,11 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 768px) {
   .news-txt-container {
-    margin: 20px;
-    width: 60%;
+    width: 47%;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .osborn-order {
     flex-direction: column-reverse;
   }
@@ -369,7 +403,7 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 1024px) {
   .releas-data-container {
-    width: 35%;
+    width: 45%;
   }
 }
 
@@ -392,7 +426,7 @@ input[type=text]::-webkit-input-placeholder {
 
 .news-button {
   width: 100%;
-  padding: 10px 40px;
+  justify-content: center;
   border: 4px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 4px;
@@ -405,7 +439,8 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 1024px) {
   .news-button {
-    width: 35%;
+    width: 130px;
+    height: 40px;
   }
 }
 
@@ -654,6 +689,7 @@ input[type=text]::-webkit-input-placeholder {
   margin-left: 5px;
   margin-bottom: 5px;
   height: 17px;
+  filter: invert(100%);
 }
 @media (min-width: 768px) {
   .button-albums {
@@ -721,6 +757,16 @@ footer {
     flex-direction: row;
   }
 }
+@media (min-width: 1024px) {
+  .footer-container {
+    width: 900px;
+  }
+}
+@media (min-width: 1280px) {
+  .footer-container {
+    width: 1020px;
+  }
+}
 
 .footer-blocks-styles {
   margin: 0;
@@ -733,7 +779,7 @@ footer {
 }
 
 .footer-link-styles {
-  line-height: 20px;
+  line-height: 200%;
   color: #CACACA;
 }
 
@@ -781,8 +827,6 @@ body {
 
 .wrapper {
   margin: auto;
-  margin: auto;
-  max-width: 1200px;
 }
 @media (max-width: 320px) {
   .wrapper {
@@ -791,12 +835,32 @@ body {
 }
 @media (min-width: 320px) {
   .wrapper {
+    width: 280px;
+  }
+}
+@media (min-width: 375px) {
+  .wrapper {
+    width: 330px;
+  }
+}
+@media (min-width: 425px) {
+  .wrapper {
     width: 87%;
+  }
+}
+@media (min-width: 768px) {
+  .wrapper {
+    width: 672px;
+  }
+}
+@media (min-width: 1024px) {
+  .wrapper {
+    width: 1000px;
   }
 }
 @media (min-width: 1280px) {
   .wrapper {
-    width: 100%;
+    width: 1200px;
   }
 }
 
@@ -814,6 +878,10 @@ body {
 
 .pt50 {
   padding-top: 50px;
+}
+
+.pt25 {
+  padding-top: 25px;
 }
 
 .pb50 {
