--- a/styles/scss/latestnews.scss
+++ b/styles/scss/latestnews.scss
@@ -5,16 +5,21 @@
         flex-direction: row;
         justify-content: space-between;
     }
-    &>div {
-        padding-right: 70px;
+    &>div:first-child {
+        @media (min-width: 768px) {
+            padding-right: 70px;
+        }
     }
 }
 
 .news-txt-container {
-    width: 100%;
+    width: 280px;
     justify-content: space-evenly;
     @media (min-width: 768px) {
-        width: 47%;
+        width: 450px;
+    }
+    @media (min-width: 1024px) {
+        width: 570px;
     }
 }
 
@@ -35,16 +40,16 @@
 }
 
 .releas-data-container {
-    width: 100%;
+    width: 280px;
     @media (min-width: 768px) {
-        width: 90%;
+        width: 230px;
     }
     @media (min-width: 1024px) {
-        width: 45%;
+        width: 230px;
     }
 }
 
-.h25-19 {
+.h-mob25-desk19 {
     height: 19;
     @media (min-width: 1024px) {
         height: 25px;
@@ -60,14 +65,14 @@
 }
 
 .news-button {
-    width: 100%;
+    width: 280px;
     justify-content: center;
     border: 4px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 4px;
     color: $palette-search-form-background;
     @media (min-width: 768px) {
-        width: 90%;
+        width: 230px;
     }
     @media (min-width: 1024px) {
         width: 130px;
