--- a/styles/scss/subscribe.scss
+++ b/styles/scss/subscribe.scss
@@ -49,10 +49,13 @@
 }
 
 .subscribe-btn {
-    width: 100%;
+    width: 240px;
     padding: 21px;
     color: $palette-text-primary;
     border: 4px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 4px;
+    @media (min-width: 1280px) {
+        width: 300px;
+    }
 }
