--- a/styles/style.css
+++ b/styles/style.css
@@ -129,14 +129,13 @@
   margin: auto;
   max-width: 1200px;
   min-height: 170px;
-  display: flex;
   flex-direction: column;
   align-items: baseline;
 }
 @media (min-width: 1024px) {
   .header-container {
     min-height: 30px;
-    width: 100%;
+    width: 900px;
     flex-direction: row;
     align-items: center;
   }
@@ -155,11 +154,11 @@
   }
 }
 
-.h-20-17 {
+.h-mob20-desk17 {
   height: 20px;
 }
 @media (min-width: 1024px) {
-  .h-20-17 {
+  .h-mob20-desk17 {
     height: 17px;
   }
 }
@@ -279,7 +278,6 @@ input[type=text]::-webkit-input-placeholder {
   border-radius: 3px;
   border: 1px solid transparent;
   color: #FFFFFF;
-  text-transform: uppercase;
   background-color: #34C176;
 }
 @media (min-width: 768px) {
@@ -345,12 +343,17 @@ input[type=text]::-webkit-input-placeholder {
 }
 
 .subscribe-btn {
-  width: 100%;
+  width: 240px;
   padding: 21px;
   color: #FFFFFF;
   border: 4px solid #FFFFFF;
   box-sizing: border-box;
   border-radius: 4px;
+}
+@media (min-width: 1280px) {
+  .subscribe-btn {
+    width: 300px;
+  }
 }
 
 .news-aricle-container {
@@ -363,17 +366,24 @@ input[type=text]::-webkit-input-placeholder {
     justify-content: space-between;
   }
 }
-.news-aricle-container > div {
-  padding-right: 70px;
+@media (min-width: 768px) {
+  .news-aricle-container > div:first-child {
+    padding-right: 70px;
+  }
 }
 
 .news-txt-container {
-  width: 100%;
+  width: 280px;
   justify-content: space-evenly;
 }
 @media (min-width: 768px) {
   .news-txt-container {
-    width: 47%;
+    width: 450px;
+  }
+}
+@media (min-width: 1024px) {
+  .news-txt-container {
+    width: 570px;
   }
 }
 
@@ -394,24 +404,24 @@ input[type=text]::-webkit-input-placeholder {
 }
 
 .releas-data-container {
-  width: 100%;
+  width: 280px;
 }
 @media (min-width: 768px) {
   .releas-data-container {
-    width: 90%;
+    width: 230px;
   }
 }
 @media (min-width: 1024px) {
   .releas-data-container {
-    width: 45%;
+    width: 230px;
   }
 }
 
-.h25-19 {
+.h-mob25-desk19 {
   height: 19;
 }
 @media (min-width: 1024px) {
-  .h25-19 {
+  .h-mob25-desk19 {
     height: 25px;
   }
 }
@@ -425,7 +435,7 @@ input[type=text]::-webkit-input-placeholder {
 }
 
 .news-button {
-  width: 100%;
+  width: 280px;
   justify-content: center;
   border: 4px solid #FFFFFF;
   box-sizing: border-box;
@@ -434,7 +444,7 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 768px) {
   .news-button {
-    width: 90%;
+    width: 230px;
   }
 }
 @media (min-width: 1024px) {
@@ -454,12 +464,17 @@ input[type=text]::-webkit-input-placeholder {
 }
 
 .mobile-application-text-container {
-  width: 100%;
+  width: 280px;
   color: #808080;
 }
 @media (min-width: 768px) {
   .mobile-application-text-container {
-    width: 45%;
+    width: 340px;
+  }
+}
+@media (min-width: 1280px) {
+  .mobile-application-text-container {
+    width: 570px;
   }
 }
 
@@ -470,16 +485,16 @@ input[type=text]::-webkit-input-placeholder {
   border-radius: 50px;
   color: #FFFFFF;
   border: 1px solid #FF4157;
-  width: 100%;
+  width: 280px;
 }
 @media (min-width: 768px) {
   .mobile-application-button {
-    width: 50%;
+    width: 200px;
   }
 }
 @media (min-width: 1024px) {
   .mobile-application-button {
-    width: 35%;
+    width: 130px;
   }
 }
 
@@ -506,11 +521,11 @@ input[type=text]::-webkit-input-placeholder {
   }
 }
 
-.h-20-16 {
+.h-mob20-desk16 {
   height: 20px;
 }
 @media (min-width: 1024px) {
-  .h-20-16 {
+  .h-mob20-desk16 {
     height: 16px;
   }
 }
@@ -534,7 +549,17 @@ input[type=text]::-webkit-input-placeholder {
 }
 @media (min-width: 768px) {
   .popular-tracks-sec-container {
-    min-width: 45%;
+    min-width: 280px;
+  }
+}
+@media (min-width: 1024px) {
+  .popular-tracks-sec-container {
+    min-width: 350px;
+  }
+}
+@media (min-width: 1280px) {
+  .popular-tracks-sec-container {
+    width: 570px;
   }
 }
 
@@ -551,12 +576,12 @@ input[type=text]::-webkit-input-placeholder {
   max-width: 600px;
 }
 
-.h-50-55 {
+.h-mob50-desk55 {
   height: 50px;
   width: 50px;
 }
 @media (min-width: 768px) {
-  .h-50-55 {
+  .h-mob50-desk55 {
     height: 55px;
   }
 }
@@ -583,12 +608,22 @@ input[type=text]::-webkit-input-placeholder {
 
 .popular-tracks-cover {
   padding-top: 50px;
-  width: 100%;
+  width: 280px;
   flex-wrap: wrap;
 }
 @media (min-width: 768px) {
   .popular-tracks-cover {
-    min-width: 45%;
+    width: 600px;
+  }
+}
+@media (min-width: 1024px) {
+  .popular-tracks-cover {
+    width: 960px;
+  }
+}
+@media (min-width: 1280px) {
+  .popular-tracks-cover {
+    width: 1200px;
   }
 }
 
@@ -610,11 +645,11 @@ input[type=text]::-webkit-input-placeholder {
   }
 }
 
-.fsz-16-20 {
+.fsz-mob16-desk20 {
   font-size: 16px;
 }
 @media (min-width: 1024px) {
-  .fsz-16-20 {
+  .fsz-mob16-desk20 {
     font-size: 20px;
   }
 }
@@ -623,7 +658,7 @@ input[type=text]::-webkit-input-placeholder {
   height: 250px;
   width: 130px;
   align-content: stretch;
-  line-height: 150%;
+  line-height: 23px;
 }
 @media (min-width: 425px) {
   .diskography-album-container {
@@ -745,7 +780,7 @@ input[type=text]::-webkit-input-placeholder {
   }
 }
 
-footer {
+.bg-gradient {
   background-image: linear-gradient(89.02deg, #5328A1 32.83%, #95390C 81.56%);
 }
 
@@ -779,17 +814,12 @@ footer {
 }
 
 .footer-link-styles {
-  line-height: 200%;
+  line-height: 30px;
   color: #CACACA;
 }
 
 .social-container {
-  width: 50%;
-}
-@media (min-width: 768px) {
-  .social-container {
-    width: 100%;
-  }
+  width: 150px;
 }
 
 .footer-white-line-styles {
@@ -864,20 +894,24 @@ body {
   }
 }
 
-.pt100 {
-  padding-top: 100px;
+.mt100 {
+  margin-top: 100px;
 }
 
-.pb100 {
-  padding-bottom: 100px;
+.mb100 {
+  margin-bottom: 100px;
+}
+
+.mt80 {
+  margin-top: 80px;
 }
 
 .pt80 {
   padding-top: 80px;
 }
 
-.pt50 {
-  padding-top: 50px;
+.mt50 {
+  margin-top: 50px;
 }
 
 .pt25 {
@@ -952,7 +986,7 @@ body {
   flex-direction: column;
 }
 
-.f-content-sb {
+.justify-content-between {
   justify-content: space-between;
 }
 
