font is roboto normal, procentages removed,buttons common classes

--- a/styles/scss/1.1.mainpageaccess.scss
+++ b/styles/scss/1.1.mainpageaccess.scss
@@ -3,7 +3,6 @@ input[type="text"]::-webkit-input-placeholder {
 }
 
 .main-page-access-container {
-
     @media (max-width: 425px) {
         padding-top: 70px;
         padding-bottom: 50px;
@@ -24,34 +23,25 @@ input[type="text"]::-webkit-input-placeholder {
 
 .b-main-page-acces-form-container {
     max-width: 570px;
-    width: 100%;
+    width: 280px;
     flex-wrap: wrap;
+    @media (min-width: 768px) {
+        width: 570px;
+    }
 }
 
 .main-page-acces-inputs {
     margin-bottom: 20px;
     color: $palette-text-primary;
     padding: 15px;
-    height: 40px;
-    width: 100%;
+    height: 50px;
+    width: 280px;
     background-color: rgba(255, 255, 255, 0.1);
     border: 2px solid rgba(255, 255, 255, 0.1);
     box-sizing: border-box;
     border-radius: 3px;
     @media (min-width: 768px) {
         margin-bottom: 0px;
-        width: 45%;
-    }
-}
-
-.main-page-acces-form-button {
-    height: 40px;
-    width: 100%;
-    border-radius: 3px;
-    border: 1px solid transparent;
-    color: $palette-text-primary;
-    background-color: $palette-button-access;
-    @media (min-width: 768px) {
-        margin-top: 20px;
+        width: 270px;
     }
 }
