--- a/styles/scss/1.3.latestnews.scss
+++ b/styles/scss/1.3.latestnews.scss
@@ -23,7 +23,7 @@
     }
 }
 
-.osborn-order {
+.news-second-order-sm {
     @media (max-width: 767px) {
         flex-direction: column-reverse;
     }
