--- a/styles/scss/app.scss
+++ b/styles/scss/app.scss
@@ -1,15 +1,16 @@
 @import "variables";
 @import "fonts";
-@import "header";
-@import "mainpageaccess";
-@import "subscribe";
-@import "latestnews";
-@import "mobileapplication";
-@import "musicianpreview";
-@import "populartracks";
-@import "diskography";
-@import "similiarartists";
-@import "footer";
+@import "buttons";
+@import "_header";
+@import "1.1.mainpageaccess";
+@import "1.2.subscribe";
+@import "1.3.latestnews";
+@import "1.4.mobileapplication";
+@import "2.1.musicianpreview";
+@import "2.2.populartracks";
+@import "2.3.diskography";
+@import "2.4.similiarartists";
+@import "_footer";
 
 body {
     margin: 0;
@@ -18,14 +19,6 @@ body {
     background-color: $palette-background-primary;
     font-family: $font--famaly-primary;
     color: $palette-text-primary;
-}
-
-.visually-hidden {
-    position: absolute;
-    clip: rect(0 0 0 0);
-    width: 1px;
-    height: 1px;
-    margin: -1px;
 }
 
 .wrapper {
@@ -40,7 +33,10 @@ body {
         width: 330px;
     }
     @media (min-width: 425px) {
-        width: 87%;
+        width: 410px;
+    }
+    @media (min-width: 540px) {
+        width: 500px;
     }
     @media (min-width: 768px) {
         width: 672px;
@@ -51,6 +47,14 @@ body {
     @media (min-width: 1280px) {
         width: 1200px;
     }
+}
+
+.pt250 {
+    padding-top: 250px;
+}
+
+.pb250 {
+    padding-bottom: 250px;
 }
 
 .mt100 {
@@ -79,6 +83,10 @@ body {
 
 .pb50 {
     padding-bottom: 50px;
+}
+
+.pb80 {
+    padding-bottom: 80px;
 }
 
 .p-m-0 {
